2007-01-04  Guilherme de S. Pastore  <gpastore@gnome.org>

	* translation-teams.xml.in: s/Portugese/Portuguese/

2007-01-04  Guilherme de S. Pastore  <gpastore@gnome.org>

	* people.xml.in: fixed double entry of gdvieira.

	* translation-teams.xml.in: Updated coordinator information for
	  pt_BR team based on developer.gnome.org.

2007-01-04  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: Unfreeze epiphany trunk.

2007-01-03  Danilo Šegan  <danilo@gnome.org>

	* translation-teams.xml.in: s/Gallegan/Galician/.

2007-01-02  Aaron Bockover  <abock@gnome.org>

	* gnome-modules.xml.in: Change the banshee layout some, and update
	project information.

	* people.xml.in: Add myself.
	
2007-01-02  Joe Shaw  <joeshaw@novell.com>

	* gnome-modules.xml.in: Change the beagle layout some, and update
	project information.

	* people.xml.in: Add myself.
	
2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: Add beagle and bashee specific layouts.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: string-freeze gnome-2-16 and gnome-2-14.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* templates/language-release-doc-stats-modules.tmpl: Don't list non-existing templates.

	* gnome-modules.xml.in:
	* translation-teams.xml.in: Update more data.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* releases.py (Releases.__init__): Fix handling of releases without categories.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* people.xml.in:
	* translation-teams.xml.in: Update Bengali data.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* templates/module.tmpl: Priority to SVNWEB.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* people.py (get_roles_for):
	* templates/person.tmpl:
	Display obscured email address.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* translation-teams.xml.in: Updated mk entry.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* people.xml.in:
	* translation-teams.xml.in:
	Updated.
