@@ -55,6 +55,13 @@
     <email>jrl@ids.org.au</email>
     <nick>doctau</nick>
   </person>
+  <person id="lucasr">
+    <name>Lucas Rocha</name>
+    <email>lucasr@gnome.org</email>
+    <icon>http://planet.gnome.org/heads/lucasr.png</icon>
+    <nick>lucasr</nick>
+    <webpage>http://www.gnome.org/~lucasr/</webpage>
+  </person>
   <person id="marco">
     <name>Marco Pesenti Gritti</name>
     <email>marco@gnome.org</email>
