@@ -1,3 +1,9 @@
+2007-01-04  Lucas Rocha  <lucasr@gnome.org>
+
+	* gnome-modules.xml.in: Change the eog layout some, and update
+	project information.
+	* people.xml.in: Add myself.
+
 2007-01-04  Guilherme de S. Pastore  <gpastore@gnome.org>
 
 	* translation-teams.xml.in: s/Portugese/Portuguese/
